[IMP] improve condition naming

--- a/chainsaw_rules/microsoft_rasvpn_events/eid_20220_20227_rasvpn_client_connection_error.yml
+++ b/chainsaw_rules/microsoft_rasvpn_events/eid_20220_20227_rasvpn_client_connection_error.yml
@@ -25,9 +25,14 @@ fields:
     to: Event.EventData.Data
 
 filter:
-  condition: connection_error
+  condition: invalid_server_cert or rasconnection_failed
 
-  connection_error:
+  invalid_server_cert:
+      Event.System.EventID: 20227
+      Event.System.Channel: Application
+      Event.System.Provider: RasClient
+
+  rasconnection_failed:
       Event.System.EventID: 20227
       Event.System.Channel: Application
       Event.System.Provider: RasClient
